--- a/src/output.css
+++ b/src/output.css
@@ -588,6 +588,10 @@ video {
   z-index: 20;
 }
 
+.m-4 {
+  margin: 1rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -655,6 +659,18 @@ video {
 
 .mb-1 {
   margin-bottom: 0.25rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.ml-\[2\.5rem\] {
+  margin-left: 2.5rem;
 }
 
 .block {
@@ -731,6 +747,30 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-2\/3 {
+  width: 66.666667%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-\[75\] {
+  width: 75;
+}
+
+.w-\[75\%\] {
+  width: 75%;
+}
+
+.w-\[25\] {
+  width: 25;
+}
+
+.w-\[25\%\] {
+  width: 25%;
 }
 
 .max-w-screen-xl {
@@ -877,6 +917,16 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -945,6 +995,14 @@ video {
   line-height: 1.25rem;
 }
 
+.text-\[5rem\] {
+  font-size: 5rem;
+}
+
+.text-\[1\.2rem\] {
+  font-size: 1.2rem;
+}
+
 .font-medium {
   font-weight: 500;
 }
@@ -980,6 +1038,10 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[1\.5\\rem\] {
+  color: 1.5\rem;
 }
 
 .shadow-md {
@@ -1081,6 +1143,14 @@ video {
     margin-top: 0px;
   }
 
+  .md\:ml-\[4\.5\] {
+    margin-left: 4.5;
+  }
+
+  .md\:ml-\[4\.5rem\] {
+    margin-left: 4.5rem;
+  }
+
   .md\:flex {
     display: flex;
   }
@@ -1152,6 +1222,10 @@ video {
 
   .md\:text-\[2\.2rem\] {
     font-size: 2.2rem;
+  }
+
+  .md\:text-\[2\.7rem\] {
+    font-size: 2.7rem;
   }
 
   .md\:font-semibold {
